<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_margin="16dp"
        android:hint="@string/search"
        app:errorEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_outline_search_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filters"
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:src="@drawable/ic_outline_expand_more_24"
        app:layout_constraintBottom_toBottomOf="@+id/filters"
        app:layout_constraintEnd_toEndOf="@+id/filters"
        app:layout_constraintStart_toStartOf="@+id/filters"
        app:layout_constraintTop_toTopOf="@+id/filters" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_search">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/classes" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_races"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/races" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_equipments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipments" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_spells"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spells" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_feats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feats" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_monsters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monsters" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules" />
    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_goneMarginTop="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="8dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:spanCount="2" />

    <ImageView
        android:id="@+id/empty"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view"
        app:layout_constraintStart_toStartOf="@+id/recycler_view"
        app:layout_constraintTop_toTopOf="@+id/recycler_view" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_empty_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view"
        app:layout_constraintStart_toStartOf="@+id/recycler_view"
        app:layout_constraintTop_toTopOf="@+id/recycler_view"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/empty" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_error_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view"
        app:layout_constraintStart_toStartOf="@+id/recycler_view"
        app:layout_constraintTop_toTopOf="@+id/recycler_view"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/error" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view"
        app:layout_constraintStart_toStartOf="@+id/recycler_view"
        app:layout_constraintTop_toTopOf="@+id/recycler_view" />
</androidx.constraintlayout.widget.ConstraintLayout>